# sqlite-repr

./: Cargo.toml  README.md
ui/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
ui/src/: main.rs
ui/src/parser/: header.rs  mod.rs  reader.rs
ui/src/ui/: header.rs  home.rs  mod.rs  state.rs  viewer.rs
