[package]
name = "ui"
version = "0.1.0"
authors = ["lyfQAQ <0219lyf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


dioxus = { version = "0.5", features = ["web", "router"] }
manganis = { version = "0.2.2" }


# Debug
dioxus-logger = "0.5.1"
